--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -50,20 +50,43 @@ main {
     grid-column: span 4;
     grid-row: span 4;
     display: grid;
-    grid-template-columns: inherit;
-    grid-template-rows: repeat(4, 1fr);
-    /* background-color: none; */
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
 }
 
 .clock {
-    grid-column: inherit;
-    grid-row: span 2;
+    grid-column: 2 / 7;
+    grid-row: 2 / 7;
+    background-color:rgba(146, 137, 137, 0.6);
+    text-align: center;
+    border-radius: 10px;
 }
 
-.belowclock {
-    grid-column: inherit;
-    grid-row: span 2;
-    /* background-color: rgba(207, 197, 197, 0.5); */
+#clockdiv{
+    color: #000;
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+    font-size: 30px;
+}
+
+#clockdiv > div{
+    padding: 10px;
+    border-radius: 3px;
+    background:rgba(146, 137, 150, 0.6);
+    display: inline-block;
+}
+
+#clockdiv div > span{
+    padding: 15px;
+    border-radius: 3px;
+    background: rgba(97, 97, 97, 0.8);
+    display: inline-block;
+}
+
+.smalltext{
+    padding-top: 5px;
+    font-size: 14px;
 }
 
 article {
@@ -331,6 +354,41 @@ ul {
         display: grid;
         grid-template-columns: repeat(8, 1fr);
         grid-template-rows: repeat(8, 1fr);
+    }
+
+    .clock {
+        grid-column: 3 / 7;
+        grid-row: 3 / 7;
+        background-color:rgba(146, 137, 137, 0.6);
+        text-align: center;
+        border-radius: 10px;
+    }
+
+    #clockdiv{
+        color: #000;
+        display: inline-block;
+        font-weight: 100;
+        text-align: center;
+        font-size: 30px;
+    }
+    
+    #clockdiv > div{
+        padding: 10px;
+        border-radius: 3px;
+        background:rgba(146, 137, 150, 0.6);
+        display: inline-block;
+    }
+    
+    #clockdiv div > span{
+        padding: 15px;
+        border-radius: 3px;
+        background: rgba(97, 97, 97, 0.8);
+        display: inline-block;
+    }
+    
+    .smalltext{
+        padding-top: 5px;
+        font-size: 16px;
     }
     
     article {
