--- a/site/css/style.css
+++ b/site/css/style.css
@@ -57,28 +57,51 @@ main {
 .clock {
     grid-column: 2 / 7;
     grid-row: 2 / 7;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
     background-color:rgba(146, 137, 137, 0.6);
     text-align: center;
     border-radius: 10px;
 }
 
-#clockdiv{
+.clock h1 {
+    grid-column: span 2;
+    grid-row: span 1;
+    display: grid;
+    align-items: center;
+}
+
+#clockdiv {
+    grid-column: span 2;
+    grid-row: span 2;
     color: #000;
-    display: inline-block;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     font-weight: 100;
     text-align: center;
     font-size: 30px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    align-items: center;
+    background:rgba(146, 137, 150, 0.6);
+
 }
 
-#clockdiv > div{
-    padding: 10px;
+#clockdiv > div {
+    /* padding: 10px; */
     border-radius: 3px;
-    background:rgba(146, 137, 150, 0.6);
     display: inline-block;
 }
 
-#clockdiv div > span{
-    padding: 15px;
+#clockdiv div {
+    grid-column: span 1;
+    grid-row: span 1;
+}
+
+#clockdiv div > span {
+    /* padding: 15px; */
     border-radius: 3px;
     background: rgba(97, 97, 97, 0.8);
     display: inline-block;
@@ -90,8 +113,8 @@ main {
 }
 
 article {
-    grid-column: span 2;
-    grid-row: span 4;
+    grid-column: 1 / 3.5;
+    grid-row: span 7;
     text-align: center;
     font-size: 20px;
     background-color: rgba(134, 129, 129, 0.8);
@@ -104,8 +127,8 @@ article p {
 }
 
 aside {
-    grid-column: span 2;
-    grid-row: span 4;
+    grid-column: 3.5 / 8;
+    grid-row: span 7;
     background-color: rgba(175, 175, 175, 0.8);
     display: grid;
     grid-template-columns: 50vw;
@@ -366,14 +389,20 @@ ul {
 
     #clockdiv{
         color: #000;
-        display: inline-block;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
         font-weight: 100;
         text-align: center;
         font-size: 30px;
+        align-items: center;
+        background-color: transparent !important;
     }
     
     #clockdiv > div{
+        grid-column: span 1;
         padding: 10px;
+        margin: 10px;
         border-radius: 3px;
         background:rgba(146, 137, 150, 0.6);
         display: inline-block;
